--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@openai/agents": "^0.3.0",
+    "@openai/chatkit": "^1.0.1",
     "@openai/chatkit-react": "^1.2.0",
     "next": "16.0.1",
     "openai": "^6.8.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-markdown": "^10.1.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
